--- a/School_Bus/Views/Car/CarView.xaml
+++ b/School_Bus/Views/Car/CarView.xaml
@@ -25,67 +25,67 @@
                 <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal"
-                    VerticalAlignment="Top"
-                    Grid.Column="0">
+                        VerticalAlignment="Top"
+                        Grid.Column="0">
                 <fa:IconImage Icon="Search" Height="20" Width="20" Foreground="Orange"/>
-                <TextBox    
-                FontSize="13"
-                     Height="24"
-                       Width="300"
-                       Background="Transparent"
-                         FontWeight="Medium"
-                         FontFamily="Montserrat"                            
-                         Foreground="Purple"
-                         CaretBrush="Orange"
-                         BorderBrush="Orange"
-                         BorderThickness="0,0,0,1"                             
-                         VerticalContentAlignment="Center"
-                         Margin="5,5,0,0"
-                        Text="{Binding Id}"></TextBox>
+                <TextBox  FontSize="13"
+                          Height="24"
+                          Width="300"
+                          Background="Transparent"
+                          FontWeight="Medium"
+                          FontFamily="Montserrat"                            
+                          Foreground="Purple"
+                          CaretBrush="Orange"
+                          BorderBrush="Orange"
+                          BorderThickness="0,0,0,1"                             
+                          VerticalContentAlignment="Center"
+                          Margin="5,5,0,0"
+                          Text="{Binding Id}"></TextBox>
             </StackPanel>
-            <Button Grid.Column="1"
-                Content="Search"
-                Command="{Binding SearchCommand}"
-                Style="{StaticResource parentButton}">
-            </Button>
-            <Button Grid.Column="2"
-                Content="Add Car"
-                Name="Add_Car"
-                Command="{Binding ShowCarAddViewCommand}"
-                Style="{StaticResource parentButton}">
 
-            </Button>
+            <Button Grid.Column="1"
+                    Content="Search"
+                    Command="{Binding SearchCommand}"
+                    Style="{StaticResource parentButton}"></Button>
+
+            <Button Grid.Column="2"
+                    Content="Add Car"
+                    Name="Add_Car"
+                    Command="{Binding ShowCarAddViewCommand}"
+                    Style="{StaticResource parentButton}"></Button>
+            
             <Button Grid.Column="3"
-                Content="Remove Car"
-                Name="Remove_Car"
-                Command="{Binding ShowCarRemoveViewCommand}"
-                Style="{StaticResource parentButton}">
+                    Content="Remove Car"
+                    Name="Remove_Car"
+                    Command="{Binding ShowCarRemoveViewCommand}"
+                    Style="{StaticResource parentButton}">
             </Button>
 
         </Grid>
-        <Border Grid.Row="1"
-            Background="LightYellow"
-            CornerRadius="10" 
-            Padding="10">
-            <DataGrid ColumnWidth="*"
-              Background="Transparent"
-              BorderThickness="0"
-              ItemsSource="{Binding CarList}"
-              AutoGenerateColumns="False">
-                <DataGrid.ColumnHeaderStyle>
-                    <Style TargetType="DataGridColumnHeader">
-                        <Setter Property="Background" Value="Transparent"/>
-                        <Setter Property="Foreground" Value="Purple"/>
-                        <Setter Property="Padding" Value="10,0,0,10"/>
-                        <Setter Property="FontFamily" Value="Montserrat"/>
-                        <Setter Property="FontSize" Value="15"/>
-                    </Style>
-                </DataGrid.ColumnHeaderStyle>
-                <DataGrid.Columns>
-                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False" />
-                    <DataGridTextColumn Header="Driver Id" Binding="{Binding DriverId}" IsReadOnly="False" />
-                    <DataGridTextColumn Header="Number" Binding="{Binding Number}" IsReadOnly="False" />
-                    <DataGridTextColumn Header="Capacity" Binding="{Binding Capacity}" IsReadOnly="False" />
+            <Border Grid.Row="1"
+                    Background="LightYellow"
+                    CornerRadius="10" 
+                    Padding="10">
+                <DataGrid ColumnWidth="*"
+                          Background="Transparent"
+                          BorderThickness="0"
+                          ItemsSource="{Binding CarList}"
+                          AutoGenerateColumns="False">
+                    <DataGrid.ColumnHeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="Background" Value="Transparent"/>
+                            <Setter Property="Foreground" Value="Purple"/>
+                            <Setter Property="Padding" Value="10,0,0,10"/>
+                            <Setter Property="FontFamily" Value="Montserrat"/>
+                            <Setter Property="FontSize" Value="15"/>
+                        </Style>
+                    </DataGrid.ColumnHeaderStyle>
+                    
+                    <DataGrid.Columns>
+                        <DataGridTextColumn Header="Id" Binding="{Binding Id}" IsReadOnly="False" />
+                        <DataGridTextColumn Header="Driver Id" Binding="{Binding DriverId}" IsReadOnly="False" />
+                        <DataGridTextColumn Header="Number" Binding="{Binding Number}" IsReadOnly="False" />
+                        <DataGridTextColumn Header="Capacity" Binding="{Binding Capacity}" IsReadOnly="False" />
                     
                     <DataGridTemplateColumn Header="Action">
                         <DataGridTemplateColumn.CellTemplate>
@@ -98,13 +98,6 @@
                     </DataGridTemplateColumn>
                 </DataGrid.Columns>
       
-            
-
-
-
-
-
-
             </DataGrid>
         </Border>
     </Grid>
