--- a/School_Bus/Views/Class/ClassRemoveView.xaml
+++ b/School_Bus/Views/Class/ClassRemoveView.xaml
@@ -16,7 +16,6 @@
         <Grid.RowDefinitions>
             <RowDefinition></RowDefinition>
             <RowDefinition Height="8*"></RowDefinition>
-            
         </Grid.RowDefinitions>
 
         <Button x:Name="btnClose"
@@ -25,8 +24,7 @@
                 Click="btnClose_Click"
                 HorizontalAlignment="Right"
                 VerticalAlignment="Bottom"
-                Margin="0  0  0  20"
-                >
+                Margin="0  0  0  20">
             <fa:IconImage Icon="Xmark" Style="{StaticResource controlButtonIcon}"/>
         </Button>
 
@@ -39,9 +37,8 @@
                        Text="Class ID"
                        FontWeight="Bold"
                        Foreground="LightYellow"
-                       FontSize="18">
-                       
-            </TextBlock>
+                       FontSize="18"></TextBlock>
+            
             <ComboBox Style="{StaticResource MaterialDesignOutlinedComboBox}"
                       Margin="0 10 0 0"
                       Background="LightYellow"
@@ -54,6 +51,7 @@
                        Foreground="LightYellow"
                        FontSize="18"
                        Margin="0 20 0 0"></TextBlock>
+            
             <TextBlock Style="{StaticResource MaterialDesignBody1TextBlock}"
                        Background="LightYellow"
                        Height="50"
