--- a/School_Bus/Views/Class/ClassView.xaml
+++ b/School_Bus/Views/Class/ClassView.xaml
@@ -21,6 +21,7 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Top"
@@ -54,6 +55,11 @@
             <Button Grid.Column="3"
                     Content="Remove Class"
                     Command="{Binding ShowRemoveClassViewCommand}"
+                    Style="{StaticResource parentButton}"></Button>
+
+            <Button Grid.Column="4"
+                    Content="Refresh"
+                    Command="{Binding RefreshCommand}"
                     Style="{StaticResource parentButton}"></Button>
 
         </Grid>
