--- a/School_Bus/Views/Car/CarView.xaml
+++ b/School_Bus/Views/Car/CarView.xaml
@@ -62,6 +62,12 @@
                     Style="{StaticResource parentButton}">
             </Button>
 
+            <Button Grid.Column="4"
+                    Content="Refresh"
+                    Command="{Binding RefreshCommand}"
+                    Style="{StaticResource parentButton}">
+            </Button>
+
         </Grid>
             <Border Grid.Row="1"
                     Background="LightYellow"
