--- a/School_Bus/Views/Parent/ParentChildView.xaml
+++ b/School_Bus/Views/Parent/ParentChildView.xaml
@@ -22,6 +22,7 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal"
                         VerticalAlignment="Top"
@@ -59,6 +60,11 @@
                     Name="Remove_Parent"
                     Command="{Binding ShowRemoveParentViewCommand}"
                     Style="{StaticResource parentButton}">  
+            </Button>
+            <Button Grid.Column="4"
+                    Content="Refresh"
+                    Command="{Binding RefreshCommand}"
+                    Style="{StaticResource parentButton}">
             </Button>
 
         </Grid>
