--- a/School_Bus/Views/Ride/RidesView.xaml
+++ b/School_Bus/Views/Ride/RidesView.xaml
@@ -21,6 +21,7 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal"
                 VerticalAlignment="Top"
@@ -53,6 +54,11 @@
                     
                     Style="{StaticResource parentButton}"
                     Command="{Binding ShowRemoveRidesViewCommand}">
+            </Button>
+            <Button Grid.Column="4"
+                    Content="Refresh"
+                    Command="{Binding RefreshCommand}"
+                    Style="{StaticResource parentButton}">
             </Button>
 
         </Grid>
