--- a/School_Bus/Views/Student/StudentView.xaml
+++ b/School_Bus/Views/Student/StudentView.xaml
@@ -23,6 +23,7 @@
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
                 <ColumnDefinition Width="120"/>
+                <ColumnDefinition Width="120"/>
             </Grid.ColumnDefinitions>
             <StackPanel Orientation="Horizontal"
                     VerticalAlignment="Top"
@@ -60,6 +61,11 @@
                 Name="Student_Remove"
                 Command="{Binding ShowRemoveStudentViewCommand}"
                 Style="{StaticResource parentButton}">
+            </Button>
+            <Button Grid.Column="4"
+                    Content="Refresh"
+                    Command="{Binding RefreshCommand}"
+                    Style="{StaticResource parentButton}">
             </Button>
 
         </Grid>
